--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,7 @@ button {
 .show {
   color: #000;
   background-color: #76CE82;
+  transition: background-color .2s ease-out .2s, color .2s ease-out .2s;
 }
 
 /* Keyboard */
